unpackaged/main/default/objects/POS_Solution__c/POS_Solution__c.object-meta.xml
<CustomObject>
    <label>POS Solution</label>
    <nameField>
        <displayFormat>POS-{00000}</displayFormat>
        <label>POS Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>