unpackaged/main/default/objects/POS_Solution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>