unpackaged/main/default/objects/POS_Solution__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>