unpackaged/main/default/objects/POS_Solution__c/fields/Account_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Text__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp;  Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Text</label>
    <type>Text</type>
</CustomField>