unpackaged/main/default/objects/POS_Solution__c/fields/Account_Whitbread__c.field-meta.xml
<CustomField>
    <fullName>Account_Whitbread__c</fullName>
    <description>To capture Whitbread ID from account</description>
    <formula>Account__r.Whitbread_ID__c</formula>
    <label>Account Whitbread ID</label>
    <type>Text</type>
</CustomField>