unpackaged/main/default/objects/POS_Solution__c/fields/Acquiring_Bank__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Bank__c</fullName>
    <label>Acquiring Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>