unpackaged/main/default/objects/POS_Solution__c/fields/Acquisition_Partner__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Partner__c</fullName>
    <formula>TEXT(Account__r.Acquisition_Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Partner</label>
    <type>Text</type>
</CustomField>