unpackaged/main/default/objects/POS_Solution__c/fields/Actual_Rollout_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rollout_Date__c</fullName>
    <label>Actual Rollout Date</label>
    <type>Date</type>
</CustomField>