unpackaged/main/default/objects/POS_Solution__c/fields/Alternative_Refund_Table__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Refund_Table__c</fullName>
    <label>Alternative Refund Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>