unpackaged/main/default/objects/POS_Solution__c/fields/Associated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Associated_Owner__c</fullName>
    <label>Associated Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>