unpackaged/main/default/objects/POS_Solution__c/fields/Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_Date__c</fullName>
    <formula>Till_Software_Version__r.Available_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>