unpackaged/main/default/objects/POS_Solution__c/fields/Bank_TID__c.field-meta.xml
<CustomField>
    <fullName>Bank_TID__c</fullName>
    <label>Bank TID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>