unpackaged/main/default/objects/POS_Solution__c/fields/Base_Station__c.field-meta.xml
<CustomField>
    <fullName>Base_Station__c</fullName>
    <label>Base Station</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Comms_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A920 BT Station and Charging Cradle</fullName>
            </value>
            <value>
                <fullName>i7780 Base Station</fullName>
            </value>
            <value>
                <fullName>iWL220-250 Base Station</fullName>
            </value>
            <value>
                <fullName>L920</fullName>
            </value>
            <value>
                <fullName>Vx670 BT Station</fullName>
            </value>
            <value>
                <fullName>Vx670 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Vx680 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Vx680 Charging Cradle W/BT</fullName>
            </value>
            <value>
                <fullName>Vx690 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pax A920 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Pax A77 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Yoximo Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Tetra Move 5000 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>E355 Charging Cradle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>