unpackaged/main/default/objects/POS_Solution__c/fields/BMS_DCC_TID__c.field-meta.xml
<CustomField>
    <fullName>BMS_DCC_TID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BMS + DCC TID</label>
    <referenceTo>BMS_DCC_TID__c</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>