unpackaged/main/default/objects/POS_Solution__c/fields/BW_Imported__c.field-meta.xml
<CustomField>
    <fullName>BW_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BW_Imported</label>
    <type>Checkbox</type>
</CustomField>