unpackaged/main/default/objects/POS_Solution__c/fields/Caixa__c.field-meta.xml
<CustomField>
    <fullName>Caixa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caixa</label>
    <type>Checkbox</type>
</CustomField>