unpackaged/main/default/objects/POS_Solution__c/fields/Code_Version__c.field-meta.xml
<CustomField>
    <fullName>Code_Version__c</fullName>
    <label>Code Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>