unpackaged/main/default/objects/POS_Solution__c/fields/Comms_Type__c.field-meta.xml
<CustomField>
    <fullName>Comms_Type__c</fullName>
    <label>Comms Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Comms_Type</valueSetName>
    </valueSet>
</CustomField>