unpackaged/main/default/objects/POS_Solution__c/fields/Confirmed_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Proposed_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Proposed Solution</label>
    <type>Checkbox</type>
</CustomField>