unpackaged/main/default/objects/POS_Solution__c/fields/Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Connectivity__c</fullName>
    <label>Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online-IP</fullName>
            </value>
            <value>
                <fullName>Online-PSTN</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Batch in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>