unpackaged/main/default/objects/POS_Solution__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Uses CRM, PII Only.</inlineHelpText>
    <label>CRM</label>
    <type>Checkbox</type>
</CustomField>