unpackaged/main/default/objects/POS_Solution__c/fields/Current_Solution_Roll_out_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution_Roll_out_Status__c</fullName>
    <formula>TEXT(Solution__c) &amp; &quot; &quot; &amp; TEXT(Rolled_Out__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Solution Roll-out Status</label>
    <type>Text</type>
</CustomField>