unpackaged/main/default/objects/POS_Solution__c/fields/Diners__c.field-meta.xml
<CustomField>
    <fullName>Diners__c</fullName>
    <label>Diners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>