unpackaged/main/default/objects/POS_Solution__c/fields/Elavon_TID__c.field-meta.xml
<CustomField>
    <fullName>Elavon_TID__c</fullName>
    <label>Elavon TID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>