unpackaged/main/default/objects/POS_Solution__c/fields/EMV_Online_Keys__c.field-meta.xml
<CustomField>
    <fullName>EMV_Online_Keys__c</fullName>
    <label>EMV Online Keys</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>