unpackaged/main/default/objects/POS_Solution__c/fields/Fallback__c.field-meta.xml
<CustomField>
    <fullName>Fallback__c</fullName>
    <label>Fallback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fallback Online</fullName>
            </value>
            <value>
                <fullName>Fallback PAOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>