unpackaged/main/default/objects/POS_Solution__c/fields/Fintrax_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Fintrax_Approval_Date__c</fullName>
    <label>Fintrax Approval Date</label>
    <type>Date</type>
</CustomField>