unpackaged/main/default/objects/POS_Solution__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>