unpackaged/main/default/objects/POS_Solution__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <length>128</length>
    <type>Text</type>
</CustomField>