unpackaged/main/default/objects/POS_Solution__c/fields/Global_Payments_TID__c.field-meta.xml
<CustomField>
    <fullName>Global_Payments_TID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Payments TID</label>
    <referenceTo>Global_Payments_TID__c</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>