unpackaged/main/default/objects/POS_Solution__c/fields/Gross_Commission_Adj__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission_Adj__c</fullName>
    <formula>IF(Account__r.Number_of_POS__c &gt; 0, (Account__r.TF_Gross_Commission_YTD__c / Account__r.Number_of_POS__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Commission Adj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>