unpackaged/main/default/objects/POS_Solution__c/fields/HBOS_TID__c.field-meta.xml
<CustomField>
    <fullName>HBOS_TID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HBOS TID</label>
    <referenceTo>VAT_TID__c</referenceTo>
    <relationshipLabel>POS Solutions</relationshipLabel>
    <relationshipName>POS_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>