unpackaged/main/default/objects/POS_Solution__c/fields/HDW_Version__c.field-meta.xml
<CustomField>
    <fullName>HDW_Version__c</fullName>
    <label>HDW Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>