unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_City__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_City__c</fullName>
    <formula>Account__r.Parent.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office City</label>
    <type>Text</type>
</CustomField>