unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Id__c</fullName>
    <formula>Account__r.Parent.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Id</label>
    <type>Text</type>
</CustomField>