unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Postcode__c</fullName>
    <formula>Account__r.Parent.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Postcode</label>
    <type>Text</type>
</CustomField>