unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_Province__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Province__c</fullName>
    <formula>Account__r.Parent.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Province</label>
    <type>Text</type>
</CustomField>