unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_Rank__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Rank__c</fullName>
    <formula>IF(NOT(Account__r.Parent_Rank__c &gt; 0), 99999, Account__r.Parent_Rank__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>