unpackaged/main/default/objects/POS_Solution__c/fields/Head_Office_Street__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Street__c</fullName>
    <formula>Account__r.Parent.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office Street</label>
    <type>Text</type>
</CustomField>