unpackaged/main/default/objects/POS_Solution__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Solution__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>AX Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>