unpackaged/main/default/objects/POS_Solution__c/fields/Internal_Retailer_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Retailer_ID__c</fullName>
    <label>Internal Retailer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>