unpackaged/main/default/objects/POS_Solution__c/fields/Is_POS__c.field-meta.xml
<CustomField>
    <fullName>Is_POS__c</fullName>
    <formula>IF(OR(TEXT(Status__c) = &quot;Active&quot;, TEXT(Status__c) = &quot;Dispatched&quot;, TEXT(Status__c) = &quot;Managed&quot;, TEXT(Status__c) = &quot;Pending&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is POS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>