unpackaged/main/default/objects/POS_Solution__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <formula>Till_Software_Version__r.Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>