unpackaged/main/default/objects/POS_Solution__c/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <label>Location Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>