unpackaged/main/default/objects/POS_Solution__c/fields/Master_TID__c.field-meta.xml
<CustomField>
    <fullName>Master_TID__c</fullName>
    <label>Master TID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>