unpackaged/main/default/objects/POS_Solution__c/fields/Mastercard__c.field-meta.xml
<CustomField>
    <fullName>Mastercard__c</fullName>
    <label>Mastercard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>