unpackaged/main/default/objects/POS_Solution__c/fields/Name_of_POS__c.field-meta.xml
<CustomField>
    <fullName>Name_of_POS__c</fullName>
    <formula>TEXT(Product__c) &amp; &quot; &quot; &amp; Terminal_ID_TID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of POS</label>
    <type>Text</type>
</CustomField>