unpackaged/main/default/objects/POS_Solution__c/fields/Number_of_HO_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HO_Child_Records__c</fullName>
    <formula>Account__r.Parent.Number_of_Child_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of HO Child Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>