unpackaged/main/default/objects/POS_Solution__c/fields/Number_of_POS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_POS__c</fullName>
    <formula>Account__r.Number_of_POS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>