unpackaged/main/default/objects/POS_Solution__c/fields/On_Boarding__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding__c</fullName>
    <formula>Account__r.Parent_On_Boarding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Boarding</label>
    <type>Text</type>
</CustomField>