unpackaged/main/default/objects/POS_Solution__c/fields/Order_Phone__c.field-meta.xml
<CustomField>
    <fullName>Order_Phone__c</fullName>
    <formula>IF(Account__r.Phone = &quot;&quot;, &quot;08451298993&quot;, Account__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Phone</label>
    <type>Text</type>
</CustomField>