unpackaged/main/default/objects/POS_Solution__c/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>Account__r.Parent.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>