unpackaged/main/default/objects/POS_Solution__c/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <formula>Account__r.Parent_Account_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>