unpackaged/main/default/objects/POS_Solution__c/fields/Parent_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_City__c</fullName>
    <formula>Account__r.Parent.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Billing City</label>
    <type>Text</type>
</CustomField>