unpackaged/main/default/objects/POS_Solution__c/fields/Parent_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Street__c</fullName>
    <formula>Account__r.Parent.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Billing Street</label>
    <type>Text</type>
</CustomField>