unpackaged/main/default/objects/POS_Solution__c/fields/Parent_Number_of_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Parent_Number_of_Child_Records__c</fullName>
    <formula>Account__r.Parent_Number_of_Child_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Number of Child Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>