unpackaged/main/default/objects/POS_Solution__c/fields/Parent_VAT__c.field-meta.xml
<CustomField>
    <fullName>Parent_VAT__c</fullName>
    <formula>Account__r.Parent.VAT_Reg_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent VAT</label>
    <type>Text</type>
</CustomField>