unpackaged/main/default/objects/POS_Solution__c/fields/Passport_Scanner__c.field-meta.xml
<CustomField>
    <fullName>Passport_Scanner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport &amp; CC Scanner</label>
    <type>Checkbox</type>
</CustomField>