unpackaged/main/default/objects/POS_Solution__c/fields/Passport_Scanner_Unit__c.field-meta.xml
<CustomField>
    <fullName>Passport_Scanner_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport Scanner Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>Passport Scanner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>POS Solutions (Passport Scanner Unit)</relationshipLabel>
    <relationshipName>POS_Solutions6</relationshipName>
    <type>Lookup</type>
</CustomField>