unpackaged/main/default/objects/POS_Solution__c/fields/PCI_PTS_Standard_version__c.field-meta.xml
<CustomField>
    <fullName>PCI_PTS_Standard_version__c</fullName>
    <label>PCI PTS Standard version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>