unpackaged/main/default/objects/POS_Solution__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(Account__r.Phone = &quot;&quot;, &quot;+44 845 129 8993&quot;, Account__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>