unpackaged/main/default/objects/POS_Solution__c/fields/Pinpad__c.field-meta.xml
<CustomField>
    <fullName>Pinpad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pinpad</label>
    <type>Checkbox</type>
</CustomField>