unpackaged/main/default/objects/POS_Solution__c/fields/Pinpad_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pinpad_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pinpad Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Unit_Type__c</field>
            <operation>equals</operation>
            <value>Pinpad</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>POS Solutions (Pinpad Unit)</relationshipLabel>
    <relationshipName>POS_Solutions1</relationshipName>
    <type>Lookup</type>
</CustomField>