unpackaged/main/default/objects/POS_Solution__c/fields/Planet_App_Activation_Code__c.field-meta.xml
<CustomField>
    <fullName>Planet_App_Activation_Code__c</fullName>
    <label>Planet App Activation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>