unpackaged/main/default/objects/POS_Solution__c/fields/Planet_Pass__c.field-meta.xml
<CustomField>
    <fullName>Planet_Pass__c</fullName>
    <label>Planet Pass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Capable</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>