unpackaged/main/default/objects/POS_Solution__c/fields/Planet_Pass_Type__c.field-meta.xml
<CustomField>
    <fullName>Planet_Pass_Type__c</fullName>
    <label>Planet Pass Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ctrip Pass</fullName>
            </value>
            <value>
                <fullName>Value Retail Pass</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>