unpackaged/main/default/objects/POS_Solution__c/fields/Planet_Union_Pay__c.field-meta.xml
<CustomField>
    <fullName>Planet_Union_Pay__c</fullName>
    <label>Planet Union Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>