unpackaged/main/default/objects/POS_Solution__c/fields/Planned_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Install_Date__c</fullName>
    <label>Planned Install Date</label>
    <type>Date</type>
</CustomField>