unpackaged/main/default/objects/POS_Solution__c/fields/Planned_Rollout_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Rollout_Date__c</fullName>
    <label>Planned Rollout Date</label>
    <type>Date</type>
</CustomField>