unpackaged/main/default/objects/POS_Solution__c/fields/POS_18ID__c.field-meta.xml
<CustomField>
    <fullName>POS_18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS 18ID</label>
    <type>Text</type>
</CustomField>