unpackaged/main/default/objects/POS_Solution__c/fields/POS_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_ID__c</fullName>
    <label>POS ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>