unpackaged/main/default/objects/POS_Solution__c/fields/POS_Ref__c.field-meta.xml
<CustomField>
    <fullName>POS_Ref__c</fullName>
    <label>POS Ref</label>
    <length>16</length>
    <type>Text</type>
</CustomField>