unpackaged/main/default/objects/POS_Solution__c/fields/POS_Solution_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution_ID__c</fullName>
    <label>POS Solution ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>